Agrega configuración EF y Migración inicial.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=(LocalDb)\\MSSQLLocalDB; database=StockControl; Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
